--- a/README
+++ b/README
@@ -1,5 +1,12 @@
-test
+################
+#    Parrot    #
+################
 
-teste Wallace Roque
+A ideia é criar uma casca em cima do Github que aumente seu potencial social.
 
-segundo teste Wallace Roque
+* Motivação:
+"Quando eu tivemos essa ideia estávamos tentando descobrir por que dá vontade de ficar para sempre girando o scroll no homepage do facebook, ou ficar recarregando a página esperando mais uma noticia. Chagamos à teoria de que é por que sempre tem algo à mais para ver."
+
+* Finalmente a ideia:
+É criar uma App onde mostre os últimos códigos escritos pelos seus amigos, como uma tela de feed do facebook, só que de código. Nessa página a ideia é que seja fácil comentar, curtir, etc para estimular as pessoas à interagirem sobre o código.
+s
