--- a/README
+++ b/README
@@ -14,8 +14,14 @@ s
 
 TODO
 
+* cache com ETag
+* Indicar para o kra quem ele pode seguir, ou quem ele pode ver os commits. Meio que fazer ele enxergar vantagem logo de cara...
 * mostrar repositório onde o push foi feito, e se foi fork de algum outro repositório.
 * mostrar à quanto tempo o commit / push foi feito e não a data.
 * poder visualizar os comentários de um commit.
 * paginação, permitir que o kra veja quantos commits ele quiser.
 * login com github, para o kra poder commentar do próprio parrot e seguir pessoas diferentes das do github.
+* Aproveitar o acesso á repositórios privados quando o kra se logar com o github.
+* Ranking dos mais seguidos
+* Talvez mostrar na página inicial já os commits das pessoas mais seguidas, para ele já ver de cara como funciona.
+* Nessa página inicial o kra poder selecionar por linguagem (a gente já ter desenvolvedores pré-definidos para cada linguagem)
