--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ################
-#    Parrot    #
+#    Parrott   #
 ################
 
 A ideia é criar uma casca em cima do Github que aumente seu potencial social.
@@ -20,7 +20,7 @@ TODO
 * mostrar à quanto tempo o commit / push foi feito e não a data.
 * poder visualizar os comentários de um commit.
 * paginação, permitir que o kra veja quantos commits ele quiser.
-* login com github, para o kra poder commentar do próprio parrot e seguir pessoas diferentes das do github.
+* login com github, para o kra poder commentar do próprio parrott e seguir pessoas diferentes das do github.
 * Aproveitar o acesso á repositórios privados quando o kra se logar com o github.
 * Ranking dos mais seguidos
 * Talvez mostrar na página inicial já os commits das pessoas mais seguidas, para ele já ver de cara como funciona.
